# kaleido

./: .gitignore  CMakeLists.txt  README.md
example/: classic.kaleido  design.kaleido
lang/: CMakeLists.txt
lang/include/: ast.hpp  context.hpp  driver.hpp  error.hpp  node.hpp  parser_assist.hpp  scope.hpp
lang/include/ast/: arithmetic.hpp  ast.hpp  bool.hpp  name.hpp  operators.hpp  rval.hpp  statement.hpp  type.hpp
lang/include/codegen/: operator_map.hpp  type_assist.hpp
lang/include/dump/: common.hpp
lang/include/node/: aexp.hpp  basic.hpp  decl.hpp  identifier.hpp  stmt.hpp  type.hpp
lang/src/: context.cpp  driver.cpp  error.cpp  node.cpp  scope.cpp
lang/src/ast/: arithmetic.cpp  ast.cpp  bool.cpp  name.cpp  operators.cpp  rval.cpp  statement.cpp  type.cpp
lang/src/codegen/: arithmetic.cpp  bool.cpp  name.cpp  operator_map.cpp  rval.cpp  statement.cpp  typs_assist.cpp
lang/src/dump/: airthmetic.cpp  bool.cpp  common.cpp  name.cpp  rval.cpp  statement.cpp
lang/src/dump/ast/: airthmetic.cpp
lang/src/node/: aexp.cpp  identifier.cpp  node.cpp  stmt.cpp  type.cpp
lang/test/: CMakeLists.txt  ast.cpp  dump_common.cpp  node.cpp  parser.cpp  type.cpp
rts/: CMakeLists.txt
rts/include/: draw.h
rts/src/: draw.c
rts/test/: test_rgbd.c
